landingPage/landing.css
/* ... */
.screen, .right, .left .top, .bottom {
    display: flex;
}

.screen, #view {
    overflow: hidden;
}

.screen {
    position: absolute;
}

.screen.backdrop {
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.5);
}

.close_wrap {
    position: absolute;
    top: 20px;
    right: 40px;
    width: 60px;
    height: 60px;
    cursor: pointer;
    display: none;
    z-index: 2;
}

.img_prev {
    display: flex;
    position: absolute;
    overflow: hidden;
    align-items: center;
    justify-content: center;
}

.img_prev.backdrop {
    z-index: 1;
}

.img_prev img {
    height: 100%;
}

/*      MENU          */
.menu_wrap {
    position: absolute;
    top: 20px;
    left: 20px;
    display: flex;
    z-index: 2;
    width: 70px;
    height: 70px;
    overflow: hidden;
    transition: all 0.3s;
    transition-timing-function: ease-out;
    padding: 5px;
    padding-left: 10px;
    border-radius: 10px;
}

.icon_wrap {
    width: 50px;
    margin-right: 30px;
    cursor: pointer;
}

.icon_wrap h1 {
    line-height: 15px;
    margin-bottom: 0;
    transform: translateY(-40px);
}

.point_wrap {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.point_wrap h4 {
    text-shadow: 8px 8px 15px #000000;
    cursor: pointer;
    line-height: unset;
    margin-bottom: 10px;
    padding: 0;
}

.point_wrap h4:hover {
    text-shadow: 8px 8px 5px #000000;
    transform: translateY(-1px);
}

.menu_wrap:hover {
    width: 250px;
    height: 260px;
    transition: all 0.3s;
    transition-timing-function: ease-in;
    background-color: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(2px);
    -webkit-backdrop-filter: blur(2px);
}


/*      SCREEN 1      */

#screen1 .left img {
    padding: 5px 10px;
    max-height: 120%;
    max-width: 100%;
    transform: translateY(18%);
}

#screen1 .left {
    padding: 5px 10px;
    width: 50%;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    transform: translateY(100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1.active .left {
    transform: translateY(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1 .right {
    width: 50%;
    height: 100%;
    flex-direction: column;

}

#screen1 .right .top, #screen1 .right .bottom {
    display: flex;
    height: 50%;
}

#screen1 .right .top {
    transform: translateY(-100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1.active .right .top {
    transform: translateY(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1 .right .top img {
    height: 80%;
    align-self: flex-end;
}

#screen1 .right .bottom {
    flex-direction: column;
    transform: translateX(100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1.active .right .bottom {
    transform: translateX(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen1 h1 {
    margin-top: 50px;
}

/*      SCREEN 2      */

#screen2 {
    flex-direction: column;
}

#screen2 .top {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 30%;
}

#screen2 .top .left, #screen2 .top .middle, #screen2 .top .right {
    display: flex;
    width: 33%;
    align-items: center;
    justify-content: center;
}

#screen2 .top .left h1 {
    transform: translateX(-500%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2.active .top .left h1 {
    transform: translateX(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2 .top .middle img {
    width: 100%;
    padding-left: 10%;
    transform: translateY(-100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2.active .top .middle img {
    transform: translateY(-38%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

.logo {
    width: 150px;
    position: absolute;
    top: 50px;
    right: 50px;
    transform: translateX(150%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2.active .logo {
    transform: translateX(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2 .bottom {
    height: 70%;
    width: 100%;
    display: flex;
}

#screen2 .bottom .left {
    width: 30%;
    position: relative;
    transform: translateX(-100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2.active .bottom .left {
    transform: translateX(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2 .bottom .right {
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transform: translateY(100%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen2.active .bottom .right {
    transform: translateY(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

.bottom .left img:nth-child(1) {
    width: 55%;
    position: absolute;
    left: 5%;
    z-index: 1;
}

.bottom .left img:nth-child(2) {
    width: 55%;
    position: absolute;
    left: 30%;
    top: 5%;
}

/*       SCREEN 3       */
#screen3 {
    display: flex;
    flex-direction: row;
}

#screen3.active .logo {
    transform: translateX(0);
}

#screen3 .left {
    width: 45%;
    margin: 5% 5%;
    margin-top: 80px;
    height: 90%;
    display: flex;
    flex-direction: column;
}

#screen3 h1 {
    margin-bottom: 0;
    transform: translateY(-180%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen3.active h1 {
    transform: translateY(0);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}

#screen3 h4 {
    margin-top: 20%;
    padding-right: 5%;
    line-height: 50px;
    padding-bottom: 0;
    transform: translateX(-150%);
    transition: all 0.5s;
    transition-timing-function: ease-out;
}
/* ... */

